--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="web.css">
     <head>
@@ -19,4 +19,8 @@
             Check the example in example.py
         </p>
     </body>
-</html>
+</html> -->
+Webpage not avaliable :(
+well, go to either the following webpage, please:
+windowsboy111.github.io/pyTableMaker/
+windowsboy111.github.io/pyLoading/
