--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
         </p>
     </body>
 </html> -->
-Webpage not avaliable :(
+<html>
+    <center>
+        <h1>
+            <p>Webpage not avaliable :(</p>
+        </h1>
 
-well, go to either the following webpage, please:
+        <h3>
+            <p>well, go to either the following webpage, please:</p>
 
-windowsboy111.github.io/pyTableMaker/
+            <p><a href="windowsboy111.github.io/pyTableMaker/">pyTableMaker</a></p>
 
-windowsboy111.github.io/pyLoading/
+            <p><a href="windowsboy111.github.io/pyLoading/">pyLoading</a></p>
