--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         <h3>
             <p>well, go to either the following webpage, please:</p>
 
-            <p><a href="windowsboy111.github.io/pyTableMaker/">pyTableMaker</a></p>
+            <p><a href="pyTableMaker/">pyTableMaker</a></p>
 
-            <p><a href="windowsboy111.github.io/pyLoading/">pyLoading</a></p>
+            <p><a href="pyLoading/">pyLoading</a></p>
