--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>windowsboy111</title>
-    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon">
+    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon" />
 </head>
 
 <body>
@@ -14,55 +14,76 @@
     </div>
 
     <div class="head" id="home">
+        <p>placeholder</p>
         <p>There you are, welcome to</p>
         <h1 class="title">windowsboy111</h1>
         <h3>just a normal website...?</h3>
         <p class="right-1">Yes it's ubuntu font time :)</p>
         <p class="small-1">With a top bar code copied from w3schools</p>
     </div>
-    <br>
+    <br />
     <div class="content" id="about">
         <p>
             I am windowsboy111, a programmer -- you know, smarties that copy
-            codes from the internet -- I create wonderful projects, that's what programmers do.
+            codes from the internet -- I create wonderful projects, that's
+            what programmers do.
         </p>
         <p>
-            I made and currently maintaining lots of python projects, python's probably my main language, I also
-            know other languages like Nim, Javascript, C++. To be honest even more but I seldom use other languages
-            like php, java but I never use them and I've probably forgotten how to code with them. R's a good example,
-            never use it, it's complicated, so I just throw it out of my mind.<br>
-            I'd consider coding as a hobby, I just enjoy coding. Just a random guy on the internet TL;DR.
+            I made and currently maintaining lots of python projects,
+            python's probably my main language, I also know other languages
+            like Nim, Javascript, C++. To be honest even more but I seldom
+            use other languages like php, java but I never use them and I've
+            probably forgotten how to code with them. R's a good example,
+            never use it, it's complicated, so I just throw it out of my
+            mind.<br />
+            I'd consider coding as a hobby, I just enjoy coding. Just a
+            random guy on the internet TL;DR.
         </p>
     </div>
-    <div class="projects" ,="" id="projects">
+    <div class="projects" id="projects">
         <h2 class="subtitle">Projects</h2>
-        <p><a href="merlin-py/" title="An open source discord.py bot that can moderate servers and more">
-                Merlin the discord.py bot
-            </a></p>
-        <p><a href="pyTableMaker/"
-                title="The library / module for python to allow programmers to create, edit and show tables without gui conveniently">
-                pyTableMaker
-            </a></p>
-        <p><a href="marshup/" title="A file explorer written in nim-lang for colorized consoles">
-                Marshup Commander
-            </a></p>
+        <p>
+            <a href="merlin-py/"> Merlin the discord.py bot </a>
+        </p>
+        <p>
+            <a href="pyTableMaker/"> pyTableMaker </a>
+        </p>
+        <p>
+            <a href="marshup/"> Marshup Commander </a>
+        </p>
     </div>
-    <div class="about" ,="" id="about">
+    <div class="about" id="about">
         <h2 class="subtitle">About</h2>
         <p>
-            Ya can follow me on <a href="https://twitter.com/windowsboy111">twitter</a>, that's what i mainly use;<br>
-            Tech <a href="https://bit.ly/windowsboy111">Youtube channel</a> boom;<br>
-            <a href="https://youtube.com/windowsboy111">Here's my minecraft channel</a>;<br>
-            Github gang like everyone <a href="https://github.com/windowsboy111">here</a>.<br><br>
-            Also you can find me via discord on the following servers / guilds:
+            Ya can follow me on
+            <a href="https://twitter.com/windowsboy111">twitter</a>, that's
+            what i mainly use;<br />
+            Tech
+            <a href="https://bit.ly/windowsboy111">Youtube channel</a>
+            boom;<br />
+            <a href="https://youtube.com/windowsboy111">Here's my minecraft channel</a>;<br />
+            Github gang like everyone
+            <a href="https://github.com/windowsboy111">here</a>.<br /><br />
+            Also you can find me via discord on the following servers /
+            guilds:
         </p>
         <ul>
-            <li><a href="https://discord.gg/4c4F46t">Siri's world</a> oh btw siri is a great guy, he's the server owner
+            <li>
+                <a href="https://discord.gg/4c4F46t">Siri's world</a> oh btw
+                siri is a great guy, he's the server owner
             </li>
-            <li><a href="https://discord.gg/cRH2kcS">Bots pit</a> this is my guild for testing bots</li>
-            <li><a href="https://discord.gg/Yc2Gs25">Young tech guru</a> we talk about tech here</li>
-            <li>If you play minecraft and you know cantonese come join <a
-                    href="https://discord.gg/Cds6Ntj">Crabricorn</a></li>
+            <li>
+                <a href="https://discord.gg/cRH2kcS">Bots pit</a> this is my
+                guild for testing bots
+            </li>
+            <li>
+                <a href="ytg/index.html">Young tech guru</a> we
+                talk about tech here
+            </li>
+            <li>
+                If you play minecraft and you know cantonese come join
+                <a href="https://discord.gg/Cds6Ntj">Crabricorn</a>
+            </li>
         </ul>
         <p></p>
     </div>
@@ -70,7 +91,7 @@
         <p>Copyright (c) windowsboy111 2020 · nim gang</p>
     </div>
 
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="web.css" type="text/css" />
     <script src="index.js"></script>
 </body>
 
