--- a/marshup/index.html
+++ b/marshup/index.html
@@ -15,6 +15,7 @@
         <a href="https://github.com/windowsboy111/marshup/">Github</a>
     </div>
     <div class="head" id="home">
+        <p>placeholder</p>
         <h1 class="title">Marshup Commander</h1>
         <h3>A text-based explorer written in nim</h3>
         <p>for colorful consoles</p>
