--- a/merlin-py/index.html
+++ b/merlin-py/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <div class="head" id="home">
+        <p>placeholder</p>
         <h1 class="title">Merlin</h1>
         <h3>A bot written in discord.py</h3>
         <p class='right-1'>slow and dumbo bot</p>
