--- a/pyTableMaker/index.html
+++ b/pyTableMaker/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>windowsboy111</title>
-    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon">
+    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon" />
 </head>
 <div class="topnav">
     <a class="active" href="#home">Home</a>
@@ -15,48 +15,56 @@
 
 <body>
     <div class="head" id="home">
+        <p>placeholder</p>
         <h1 class="title">pyTableMaker</h1>
-        <h3>The library / module for python to allow programmers to create, edit and show tables without gui
-            conveniently.</h3>
+        <h3>
+            The library / module for python to allow programmers to create,
+            edit and show tables without gui conveniently.
+        </h3>
     </div>
-    <br>
+    <br />
     <div class="content" id="about">
         <p>
-            This library exists because <a href="../merlin-py/">Merlin</a> needs a way to create tables conveniently,
-            and I also want it to be challenging so I code <i>my version</i> of it. It creates tables dynamically, also
+            This library exists because
+            <a href="../merlin-py/">Merlin</a> needs a way to create tables
+            conveniently, and I also want it to be challenging so I code
+            <i>my version</i> of it. It creates tables dynamically, also
             open source.
         </p>
         <p>
-            The newest <a href="https://github.com/windowsboy111/pyTableMaker/releases/tag/1.3-a2/">pre-release
-                1.3-a2</a> supports
-            <i>cell wrapping</i>, it's essentially a way to allow words to be aligned to multiple lines properly. Users
-            can
-            also have a choice of making a <code>CustomTable</code>, and users can specify what characters to form the
-            table.
-            pyTableMaker does everything for you as it dynamically generates the output.
+            The newest
+            <a href="https://github.com/windowsboy111/pyTableMaker/releases/tag/1.3-a2/">pre-release 1.3-a2</a>
+            supports <i>cell wrapping</i>, it's essentially a way to allow
+            words to be aligned to multiple lines properly. Users can also
+            have a choice of making a <code>CustomTable</code>, and users
+            can specify what characters to form the table. pyTableMaker does
+            everything for you as it dynamically generates the output.
         </p>
         <span class="Usage">
             <h2 class="subtitle">Usage</h2>
             <p>
-                You can install pyTableMaker with pypi. <code>python3 -m pip install pyTableMaker</code>.
-                Easy, right?<br>
-                You can just import the library easily with <code>import pyTableMaker</code>.
+                You can install pyTableMaker with pypi.
+                <code>python3 -m pip install pyTableMaker</code>. Easy,
+                right?<br />
+                You can just import the library easily with
+                <code>import pyTableMaker</code>.
             </p>
         </span>
         <p>
-            You can check out the usage on the main Github page by clicking on the <b>Github</b> button on the top
-            navigation bar.
-            All the functions and methods are listed under <i>README.md</i>.
+            You can check out the usage on the main Github page by clicking
+            on the <b>Github</b> button on the top navigation bar. All the
+            functions and methods are listed under <i>README.md</i>.
+        </p>
+
         <blockquote>
-            Check out CHANGELOG.md!<br>
+            Check out CHANGELOG.md!<br />
             Check out how it performs by running example.py!
         </blockquote>
-        </p>
     </div>
     <div class="footer">
         <p>Copyright (c) windowsboy111 2020 · for loops</p>
     </div>
 </body>
-<link rel="stylesheet" , href="../index.css" type="text/css">
+<link rel="stylesheet" , href="../index.css" type="text/css" />
 
 </html>
