--- a/ytg/TGF.html
+++ b/ytg/TGF.html
@@ -1,59 +1,121 @@
-<h1 id="leveltestforyoungtechguru">Level Test For Young Tech Guru</h1>
-<h2 id="introduction">Introduction</h2>
-<p>Three months after the start of this server, our admins decided to
-do a big update for the server -- kicking all "divers" and organizing
-the roles in the server. T_lymphocyte#7344 and windowsboy111#1046
-(so called "dev team") and also EnigmaOffline#2012 are mainly
-in charge of this update.</p>
-<h2 id="changes">Changes</h2>
-<ol>
-<li>Removed multiple not necessary roles like "Lunar Loo" and "niche master"</li>
-<li>Roles system update</li>
-<li>Main change -- The Big Filter</li>
-</ol>
-<h2 id="rolesrevamp">Roles Revamp</h2>
-<h3 id="stageone">Stage one</h3>
-<p>Replacing all core realm related roles for everyone in the server with a default "thinker" role.</p>
-<h3 id="stagetwo">Stage Two</h3>
-<p>The Big Filter system will be used to give out realm related roles
-only to qualified members</p>
-<h3 id="afterwards">Afterwards</h3>
-<p>Memeber with only default "thinker" role will be kicked
-if they've been inactive for 2 weeks</p>
-<hr />
-<h2 id="thebigfilter">The Big Filter</h2>
-<ul>
-<li>Inspired by the theory of why cant we observe aliens,
-we named this system The Big Filter.</li>
-<li>We aim to improve the server's tech level.</li>
-<li>We will have tests for our five core realms:<ul>
-<li>Coder</li>
-<li>AI</li>
-<li>Maker</li>
-<li>Producer</li>
-<li>Hacker</li></ul></li>
-</ul>
-<h2 id="detailsforthefilter">Details for the filter</h2>
-<h3 id="coderfilter">Coder Filter</h3>
-<p>The following programming languages will be approved for our test:</p>
-<ul>
-<li><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)/">C#</a></li>
-<li><a href="https://en.wikipedia.org/wiki/C%2B%2B/">C++</a></li>
-<li><a href="https://golang.org/">Golang</a></li>
-<li><a href="https://en.wikipedia.org/wiki/JavaScript/">JavaScript</a></li>
-<li><a href="https://oracle.com/java/">Java</a></li>
-<li><a href="https://python.org">Python</a></li>
-</ul>
-<p>We will have 3 quizes mainly on string handling.</p>
-<h3 id="makerfilter">Maker filter</h3>
-<p>We need a photo/video of your creation,
-and the admin will take a look and decide.</p>
-<h3 id="producerfilter">Producer filter</h3>
-<p>Please submit a video sample or your youtube channel containing videos
-so that the admins can have a decision.</p>
-<h3 id="hackerfilter">Hacker filter</h3>
-<p>current unknown -- may be in form of a <a href="https://ctf101.org/">CTF</a> or basic knowledge quiz about loopholes etc.</p>
-<h3 id="aifilter">AI filter</h3>
-<p>another unsure filter -- will be decided later</p>
-<h2 id="estimatedtime">Estimated Time</h2>
-<p>not decided yet</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Young tech guru</title>
+    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon" />
+</head>
+
+<body>
+    <div class="head" id="home">
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="#projects">Projects</a>
+            <a href="#about">About</a>
+        </div>
+        <p>placeholder</p>
+        <h1 id="leveltestforyoungtechguru">
+            Level Test For Young Tech Guru
+        </h1>
+    </div>
+    <h2 id="introduction">Introduction</h2>
+    <p>
+        Three months after the start of this server, our admins decided to
+        do a big update for the server -- kicking all "divers" and
+        organizing the roles in the server. T_lymphocyte#7344 and
+        windowsboy111#1046 (so called "dev team") and also
+        EnigmaOffline#2012 are mainly in charge of this update.
+    </p>
+    <h2 id="changes">Changes</h2>
+    <ol>
+        <li>
+            Removed multiple not necessary roles like "Lunar Loo" and "niche
+            master"
+        </li>
+        <li>Roles system update</li>
+        <li>Main change -- The Big Filter</li>
+    </ol>
+    <h2 id="rolesrevamp">Roles Revamp</h2>
+    <h3 id="stageone">Stage one</h3>
+    <p>
+        Replacing all core realm related roles for everyone in the server
+        with a default "thinker" role.
+    </p>
+    <h3 id="stagetwo">Stage Two</h3>
+    <p>
+        The Big Filter system will be used to give out realm related roles
+        only to qualified members
+    </p>
+    <h3 id="afterwards">Afterwards</h3>
+    <p>
+        Memeber with only default "thinker" role will be kicked if they've
+        been inactive for 2 weeks
+    </p>
+    <hr />
+    <h2 id="thebigfilter">The Big Filter</h2>
+    <ul>
+        <li>
+            Inspired by the theory of why cant we observe aliens, we named
+            this system The Big Filter.
+        </li>
+        <li>We aim to improve the server's tech level.</li>
+        <li>
+            We will have tests for our five core realms:
+            <ul>
+                <li>Coder</li>
+                <li>AI</li>
+                <li>Maker</li>
+                <li>Producer</li>
+                <li>Hacker</li>
+            </ul>
+        </li>
+    </ul>
+    <h2 id="detailsforthefilter">Details for the filter</h2>
+    <h3 id="coderfilter">Coder Filter</h3>
+    <p>
+        The following programming languages will be approved for our test:
+    </p>
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)/">C#</a>
+        </li>
+        <li><a href="https://en.wikipedia.org/wiki/C%2B%2B/">C++</a></li>
+        <li><a href="https://golang.org/">Golang</a></li>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/JavaScript/">JavaScript</a>
+        </li>
+        <li><a href="https://oracle.com/java/">Java</a></li>
+        <li><a href="https://python.org">Python</a></li>
+    </ul>
+    <p>We will have 3 quizes mainly on string handling.</p>
+    <h3 id="makerfilter">Maker filter</h3>
+    <p>
+        We need a photo/video of your creation, and the admin will take a
+        look and decide.
+    </p>
+    <h3 id="producerfilter">Producer filter</h3>
+    <p>
+        Please submit a video sample or your youtube channel containing
+        videos so that the admins can have a decision.
+    </p>
+    <h3 id="hackerfilter">Hacker filter</h3>
+    <p>
+        current unknown -- may be in form of a
+        <a href="https://ctf101.org/">CTF</a> or basic knowledge quiz about
+        loopholes etc.
+    </p>
+    <h3 id="aifilter">AI filter</h3>
+    <p>another unsure filter -- will be decided later</p>
+    <h2 id="estimatedtime">Estimated Time</h2>
+    <p>not decided yet</p>
+    <div class="footer">
+        <p>
+            Copyright (c) windowsboy111 2020 · converted from da MARKDOWN
+            PROGRAMMING LANGUAGE
+        </p>
+    </div>
+    <link rel="stylesheet" href="../web.css" type="text/css" />
+</body>
+
+</html>
