--- a/ytg/hardware_donation.html
+++ b/ytg/hardware_donation.html
@@ -10,28 +10,23 @@
     <a class="active" href="index.html">Home</a>
     <a href="#projects">Projects</a>
     <a href="#about">About</a>
-    <a href="https://github.com/lockieluke/zinc">Github</a>
-    <a href=""
 </div>
 
 <body>
     <div class="head" id="home">
         <p>placeholder</p>
-        <h1 class="title">Zinc</h1>
-        <h3>Your dream browser...?</h3>
+        <h1 class="title">Hardware donation website</h1>
     </div>
     <br />
     <div class="content" id="about">
         <p>
-            Zinc is a browser created by lockieluke that aims to be
-            lightweight and having low memory usage. Later there are more
-            developers -- from artwork to programmers -- joined the
-            development. This makes the cycle a lot faster.
+            This is a frozen project. Development has been stopped because
+            of inactivity. However I'll still explain it. In ytg we're
+            planning to make a webserver as a platform to exchange / donate
+            used or unused hardware to users. We've finished planning, we've
+            finished designing, but we haven't started programming the
+            system yet, since we are all busy on other projects.
         </p>
-        <img src="zinc_home.png" />
-    </div>
-    <div class="footer">
-        <p>Copyright (c) windowsboy111 2020 · What about Vivaldi?</p>
     </div>
 </body>
 <link rel="stylesheet" href="../web.css" type="text/css" />
