--- a/ytg/index.html
+++ b/ytg/index.html
@@ -1,37 +1,45 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Young tech guru</title>
-    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon">
+    <link rel="icon" href="https://avatars1.githubusercontent.com/u/48051237" type="image/x-icon" />
 </head>
 <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="../#home">Home</a>
     <a href="#projects">Projects</a>
     <a href="#about">About</a>
+    <a href="https://discord.gg/Yc2Gs25">Discord</a>
 </div>
 
 <body>
     <div class="head" id="home">
+        <p>placeholder</p>
         <h1 class="title">Young tech guru</h1>
         <h3>a techy discord guild</h3>
     </div>
-    <br>
+    <br />
     <div class="content" id="about">
         <p>
-            Young tech guru is just a group of people that works of different projects -- we've got a lot of different
-            development going on. If you love coding and you want to find a partner of some sort, definitely checkout
-            this guild. Meanwhile we need more high quality coders, producers, white hat hackers and AI enthusiasts!
+            Young tech guru is just a group of people that works of
+            different projects -- we've got a lot of different development
+            going on. If you love coding and you want to find a partner of
+            some sort, definitely checkout this guild. Meanwhile we need
+            more high quality coders, producers, white hat hackers and AI
+            enthusiasts!
         </p>
     </div>
     <div class="projects" , id="projects">
-        <h2 class='subtitle'>Projects</h2>
+        <h2 class="subtitle">Projects I am participated in</h2>
         <p><a href="TGF.html">THE GREAT FILTER</a></p>
         <p><a href="zinc.html">Zinc</a></p>
-        <p><a href="marshup/">Marshup Commander</a></p>
-        <p><a href="pyLoading/">pyLoading</a></p>
+        <p><a href="hardware_donation.html">Hardware Donation website</a></p>
+    </div>
+    <div class="footer">
+        <p>Copyright (c) windowsboy111 2020 · Siri's World</p>
     </div>
 </body>
-<link rel="stylesheet" , href="web.css" type="text/css">
+<link rel="stylesheet" , href="../web.css" type="text/css" />
 
 </html>
