--- a/ytg/zinc.html
+++ b/ytg/zinc.html
@@ -11,7 +11,7 @@
     <a href="#projects">Projects</a>
     <a href="#about">About</a>
     <a href="https://github.com/lockieluke/zinc">Github</a>
-    <a href=""
+    <a href="https://discord.gg/YR3nRK2">Discord</a>
 </div>
 
 <body>
