fix all css links to web.css instead of index.css

--- a/marshup/index.html
+++ b/marshup/index.html
@@ -35,6 +35,6 @@
         <p>Copyright (c) windowsboy111 2020 · using dolphin</p>
     </div>
 </body>
-<link rel="stylesheet" , href="../index.css" type="text/css">
+<link rel="stylesheet" , href="../web.css" type="text/css">
 
 </html>
