--- a/merlin-py/index.html
+++ b/merlin-py/index.html
@@ -55,6 +55,6 @@
         <p>Copyright (c) windowsboy111 2020 · love dark mode</p>
     </div>
 </body>
-<link rel="stylesheet" , href="../index.css" type="text/css">
+<link rel="stylesheet" , href="../web.css" type="text/css">
 
 </html>
