--- a/pyTableMaker/index.html
+++ b/pyTableMaker/index.html
@@ -65,6 +65,6 @@
         <p>Copyright (c) windowsboy111 2020 · for loops</p>
     </div>
 </body>
-<link rel="stylesheet" , href="../index.css" type="text/css" />
+<link rel="stylesheet" , href="../web.css" type="text/css" />
 
 </html>
