--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <div class="projects" id="projects">
         <h2 class="subtitle">Projects</h2>
         <p>
-            <a href="merlin-py/"> Merlin the discord.py bot </a>
+            <a href="merlin-py/" title="An open source discord.py bot that can moderate servers and more"> Merlin the discord.py bot </a>
         </p>
         <p>
-            <a href="pyTableMaker/"> pyTableMaker </a>
+            <a href="pyTableMaker/" title="The library / module for python to allow programmers to create, edit and show tables without gui conveniently"> pyTableMaker </a>
         </p>
         <p>
-            <a href="marshup/"> Marshup Commander </a>
+            <a href="marshup/" title="A file explorer written in nim-lang for colorized consoles"> Marshup Commander </a>
         </p>
     </div>
     <div class="about" id="about">
@@ -61,8 +61,6 @@
             Tech
             <a href="https://bit.ly/windowsboy111">Youtube channel</a>
             boom;<br />
-            <a href="https://youtube.com/windowsboy111">Here's my minecraft channel</a>;<br />
-            Github gang like everyone
             <a href="https://github.com/windowsboy111">here</a>.<br /><br />
             Also you can find me via discord on the following servers /
             guilds:
@@ -73,22 +71,14 @@
                 siri is a great guy, he's the server owner
             </li>
             <li>
-                <a href="https://discord.gg/cRH2kcS">Bots pit</a> this is my
-                guild for testing bots
-            </li>
-            <li>
                 <a href="ytg/index.html">Young tech guru</a> we
                 talk about tech here
-            </li>
-            <li>
-                If you play minecraft and you know cantonese come join
-                <a href="https://discord.gg/Cds6Ntj">Crabricorn</a>
             </li>
         </ul>
         <p></p>
     </div>
     <div class="footer">
-        <p>Copyright (c) windowsboy111 2020 · nim gang</p>
+        <p>windowsboy111 · nim gang</p>
     </div>
 
     <link rel="stylesheet" href="web.css" type="text/css" />
