--- a/merlin-py/index.html
+++ b/merlin-py/index.html
@@ -52,7 +52,7 @@
         <p class="tooltiptext">well at least now merlin-js and merlin-py is different repo</p>
     </div>
     <div class="footer">
-        <p>Copyright (c) windowsboy111 2020 · love dark mode</p>
+        <p>windowsboy111 · love dark mode</p>
     </div>
 </body>
 <link rel="stylesheet" , href="../web.css" type="text/css">
