--- a/ytg/TGF.html
+++ b/ytg/TGF.html
@@ -111,8 +111,7 @@
     <p>not decided yet</p>
     <div class="footer">
         <p>
-            Copyright (c) windowsboy111 2020 · converted from da MARKDOWN
-            PROGRAMMING LANGUAGE
+            windowsboy111 · converted from da MARKDOWN PROGRAMMING LANGUAGE
         </p>
     </div>
     <link rel="stylesheet" href="../web.css" type="text/css" />
