--- a/ytg/index.html
+++ b/ytg/index.html
@@ -18,6 +18,7 @@
         <p>placeholder</p>
         <h1 class="title">Young tech guru</h1>
         <h3>a techy discord guild</h3>
+        <p class='right-1'>No I am not the owner!</p>
     </div>
     <br />
     <div class="content" id="about">
@@ -30,7 +31,7 @@
             enthusiasts!
         </p>
     </div>
-    <div class="projects" , id="projects">
+    <div class="projects" id="projects">
         <h2 class="subtitle">Projects I am participated in</h2>
         <p><a href="TGF.html">THE GREAT FILTER</a></p>
         <p><a href="zinc.html">Zinc</a></p>
@@ -40,6 +41,6 @@
         <p>Copyright (c) windowsboy111 2020 · Siri's World</p>
     </div>
 </body>
-<link rel="stylesheet" , href="../web.css" type="text/css" />
+<link rel="stylesheet" href="../web.css" type="text/css" />
 
 </html>
