--- a/pyTableMaker/index.html
+++ b/pyTableMaker/index.html
@@ -32,7 +32,7 @@
             open source.
         </p>
         <p>
-            The newest
+            Version
             <a href="https://github.com/windowsboy111/pyTableMaker/releases/tag/1.3-a2/">pre-release 1.3-a2</a>
             supports <i>cell wrapping</i>, it's essentially a way to allow
             words to be aligned to multiple lines properly. Users can also
@@ -62,7 +62,7 @@
         </blockquote>
     </div>
     <div class="footer">
-        <p>Copyright (c) windowsboy111 2020 · for loops</p>
+        <p>windowsboy111 · for loops</p>
     </div>
 </body>
 <link rel="stylesheet" , href="../web.css" type="text/css" />
